[project]
name = "ml-causal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dowhy>=0.13",
    "econml>=0.16.0",
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotnine>=0.15.0",
    "polars>=1.34.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tableone>=0.9.5",
]
